dataset1235/2025-2/1153765216/users/2719941446/executions/2814675586_2826299531.log
== SUBMISSION (2025-08-26 18:48:21)
-- CODE: 
valor_compra = float(input("Valor compra: "))
valor_pago = float(input("Valor pago:"))

print(valor_pago-valor_compra)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
---- user output:
Valor compra: Valor pago:0.0
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
---- user output:
Valor compra: Valor pago:2.75
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
---- user output:
Valor compra: Valor pago:18.0
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
---- user output:
Valor compra: Valor pago:19.0
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
---- user output:
Valor compra: Valor pago:3.75
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
---- user output:
Valor compra: Valor pago:52.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:47:40)
-- CODE: 
valor_compra = float(input("Valor compra: "))
valor_pago = float(input("Valor pago:"))
troco = valor_pago - valorcompra
print(troco)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:48:13)
-- CODE: 
valor_compra = float(input("Valor compra: "))
valor_pago = float(input("Valor pago:"))

print(valor_pago-valor_compra)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
---- user output:
Valor compra: Valor pago:0.0
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
---- user output:
Valor compra: Valor pago:2.75
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
---- user output:
Valor compra: Valor pago:18.0
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
---- user output:
Valor compra: Valor pago:19.0
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
---- user output:
Valor compra: Valor pago:3.75
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
---- user output:
Valor compra: Valor pago:52.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
